2011-08-09  Ramon Casero  <ramon.casero@cs.ox.ac.uk>

	* add_itk_imfilter_template.sh (v0.2.1):

	- I had forgotten that for each new filter, an entry in
	CMakeLists.txt has to be added.

	* ItkToolbox/CMakeLists.txt (v0.4.1):
	* ItkToolbox/ItkImFilter.cpp (v0.4.3):

	- Added support for filters:

		itkBinaryErodeImageFilter.h

	* ItkToolbox/MexBinaryDilateImageFilter.hpp (v0.1.4),
	ItkToolbox/MexBinaryDilateImageFilter.cpp (v0.1.4):

	- Some minor edits to make it more like the corresponding Erode
	files.

	* Add ItkToolbox/MexBinaryErodeImageFilter.hpp,
	ItkToolbox/MexBinaryErodeImageFilter.cpp:

	- Copied from MexTemplateFilter.* to add support for
	itkBinaryErodeImageFilter.h to itk_imfilter()

	* ItkToolbox/MexTemplateFilter.cpp (v0.1.2):

	- Comment out the definitions of the virtual functions, as by
	default their declaration is also commented out in the .hpp file.

	* add_itk_imfilter_template.sh (v0.2.0):

	- Automatically edit the template files created for the new
	filter, ChangeLog and ItkImFilter.cpp, so that the user has a good
	starting point to add support for the new filter. Some #error
	directives have been added at points where the user should look
	and make manual changes before compiling the program.

	* ItkToolbox/MexTemplateFilter.hpp (v0.1.1):
	* ItkToolbox/MexTemplateFilter.cpp (v0.1.1):

	- Add precompiler errors to force the user look there when he
	tries to compile after automatically adding a new filter with
	add_itk_imfilter_template.sh.

	* ItkToolbox/ItkImFilter.cpp (v0.4.2):

	- Add comments that can be used by script
	add_itk_imfilter_template.sh to recognise where to insert new
	code.

	* update_README.sh (v0.1.1):

	- Add copyright header and set svn properties.

	* Add add_itk_imfilter_template.sh (v0.1.0):

	- Script to automatically create templates and modify
	ItkImFilter.cpp to add a new ITK filter to itk_imfilter(). This
	script only creates the basic skeleton. Specific parameters,